Set min height to avoid jumps in segment bodal

--- a/src/components/segmentBodal/style.module.less
+++ b/src/components/segmentBodal/style.module.less
@@ -11,6 +11,7 @@
   :global {
     .plyr {
       height: auto !important;
+      min-height: 394px;
     }
   }
 }
